--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div id="applicationHost" class="ng-cloak">
+    <div id="applicationHost" data-ng-controller="TodoCtrl" class="ng-cloak">
 	<header>
             <h1>My HDB App</h1>
 	</header>
