--- a/www/payment.html
+++ b/www/payment.html
@@ -23,7 +23,7 @@
 		<form id="orderForm" action="" method="get">
 
 		  <fieldset>
-			<legend><u>Billing details</u></legend>
+			<label><u>Billing details</u></label><br><br>
 			<br>
 			<table>
 			  <tr>
