--- a/www/payment.html
+++ b/www/payment.html
@@ -20,7 +20,7 @@
 <br><br><br><br>
 <center>
 	<div>
-		<form id="orderForm" action="" method="get">
+		<form id="orderForm" action="index.html" method="get">
 
 		  <fieldset>
 			<label><u>Billing details</u></label><br><br>
@@ -67,6 +67,11 @@
 			  </td>
 			  <td>
 				<input type="tel" name="phone" id="phone" placeholder="Include country prefix, e.g. +65" maxlength="20" />
+			  </td>
+			  </tr>
+			  <tr>
+			  <td>
+			  <input name="submit" value="Back" type="submit">
 			  </td>
 			  </tr>
 			</table>
