--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
     <form name="form1" method="post" action="payment.html">
 	<table>
 	<tr><td>
-			<label>Total Salary : </label>$<input type="text" name='salary' placeholder=" Your Total Salary" style="width:110px;" /><br><br>
+			<label>Total Salary : </label>$<input type="number" name='salary' placeholder=" Your Total Salary" style="width:120px;" /><br><br>
 		</td>
 	</tr>
 	<tr><td>
