--- a/www/payment.html
+++ b/www/payment.html
@@ -45,7 +45,7 @@
 				<label for="billingAddress">Address</label>
 			  </td>
 			  <td>
-				<textarea name="billingAddress" id="billingAddress" placeholder="House number, street, city, state" required="required" maxlength="150"></textarea>
+				<textarea name="billingAddress" id="billingAddress" placeholder="House number, street, etc." required="required" maxlength="150"></textarea>
 			  </td>
 			  </tr><tr>
 			  <td>
@@ -66,7 +66,7 @@
 				<label for="phone">Phone <em>(optional)</em></label>
 			  </td>
 			  <td>
-				<input type="tel" name="phone" id="phone" placeholder="Include country prefix, e.g. +65" maxlength="20" />
+				<input type="tel" name="phone" id="phone" placeholder="Include country prefix" maxlength="20" />
 			  </td>
 			  </tr>
 			  <tr>
